@@ -1,0 +1,64 @@
+Trace: &this('$x') at line 6
+0 => val: 0
+Trace: &println('0 => val: 0') at line 8
+1 => val: 1
+Trace: &println('1 => val: 1') at line 8
+2 => val: 2
+Trace: &println('2 => val: 2') at line 8
+3 => val: 3
+Trace: &println('3 => val: 3') at line 8
+4 => val: 4
+Trace: &println('4 => val: 4') at line 8
+5 => val: 5
+Trace: &println('5 => val: 5') at line 8
+6 => val: 6
+Trace: &println('6 => val: 6') at line 8
+7 => val: 7
+Trace: &println('7 => val: 7') at line 8
+8 => val: 8
+Trace: &println('8 => val: 8') at line 8
+9 => val: 9
+Trace: &println('9 => val: 9') at line 8
+Trace: &lambda(&closure16668447, $start => 50, $stop => 60) = &closure649878 at line 22
+Testing out range stuff: 0 => 50
+Trace: &println('Testing out range stuff: 0 => 50') at line 24
+Testing out range stuff: 1 => 51
+Trace: &println('Testing out range stuff: 1 => 51') at line 24
+Testing out range stuff: 2 => 52
+Trace: &println('Testing out range stuff: 2 => 52') at line 24
+Testing out range stuff: 3 => 53
+Trace: &println('Testing out range stuff: 3 => 53') at line 24
+Testing out range stuff: 4 => 54
+Trace: &println('Testing out range stuff: 4 => 54') at line 24
+Testing out range stuff: 5 => 55
+Trace: &println('Testing out range stuff: 5 => 55') at line 24
+Testing out range stuff: 6 => 56
+Trace: &println('Testing out range stuff: 6 => 56') at line 24
+Testing out range stuff: 7 => 57
+Trace: &println('Testing out range stuff: 7 => 57') at line 24
+Testing out range stuff: 8 => 58
+Trace: &println('Testing out range stuff: 8 => 58') at line 24
+Testing out range stuff: 9 => 59
+Trace: &println('Testing out range stuff: 9 => 59') at line 24
+Trace: &this('$start $stop') at line 29
+Trace: &_range2(70, 80) = &closure539419 at line 42
+My third test: 0 => 70
+Trace: &println('My third test: 0 => 70') at line 44
+My third test: 1 => 71
+Trace: &println('My third test: 1 => 71') at line 44
+My third test: 2 => 72
+Trace: &println('My third test: 2 => 72') at line 44
+My third test: 3 => 73
+Trace: &println('My third test: 3 => 73') at line 44
+My third test: 4 => 74
+Trace: &println('My third test: 4 => 74') at line 44
+My third test: 5 => 75
+Trace: &println('My third test: 5 => 75') at line 44
+My third test: 6 => 76
+Trace: &println('My third test: 6 => 76') at line 44
+My third test: 7 => 77
+Trace: &println('My third test: 7 => 77') at line 44
+My third test: 8 => 78
+Trace: &println('My third test: 8 => 78') at line 44
+My third test: 9 => 79
+Trace: &println('My third test: 9 => 79') at line 44
