@@ -1,15 +1,15 @@
 this is a test
-Trace: [[java.io.PrintStream@d4d66b] println: 'this is a test'] at line 6
+Trace: [java.io.PrintStream@d4d66b println: 'this is a test'] at line 6
 Trace: [java.lang.Math pow: 3, 4] = 81.0 at line 7
 81.0
-Trace: [[java.io.PrintStream@d4d66b] println: 81.0] at line 7
+Trace: [java.io.PrintStream@d4d66b println: 81.0] at line 7
 Trace: [java.lang.Math pow: 3, 5] = 243.0 at line 8
 243.0
 Trace: &println(243.0) at line 8
 testing again...
-Trace: [[java.io.PrintStream@d4d66b] println: 'testing again...'] at line 9
-Trace: [sleep.runtime.SleepUtils getListFromArray: @('a', 'b', 'c')] = [[a, b, c]] at line 11
-Trace: [new java.util.LinkedList: [[a, b, c]]] = [[a, b, c]] at line 11
+Trace: [java.io.PrintStream@d4d66b println: 'testing again...'] at line 9
+Trace: [sleep.runtime.SleepUtils getListFromArray: @('a', 'b', 'c')] = [a, b, c] at line 11
+Trace: [new java.util.LinkedList: [a, b, c]] = [a, b, c] at line 11
 Warning: variable '$list' not declared at line 11
 [a, b, c]
-Trace: &println([[a, b, c]]) at line 13
+Trace: &println([a, b, c]) at line 13
